# rickhouse

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/client/: Cargo.toml
src/common/: Cargo.toml
src/common/src/: error.rs  lib.rs
src/common/src/metadata/: column.rs  data_type.rs  mod.rs  type_util.rs  util.rs
src/common/src/serde/: buf.rs  de.rs  mod.rs
src/common/src/values/: bigint.rs  decimal.rs  ip.rs  json.rs  mod.rs  uuid.rs  value.rs
